One line script include

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 title: Home
 ---
 
-<script id="postpal-js" data-blog_uuid="6c5f7a0d-66c8-4407-8ee0-f822585cb8b0"></script>
+<script id="postpal-js" data-blog_uuid="6c5f7a0d-66c8-4407-8ee0-f822585cb8b0" src="https://js-staging.postpal.io/app.js" async></script>
 
 <div id="postpal-content"></div>
 
-<!--script src="/assets/js/main.js"></script-->
-<script src="https://js-staging.postpal.io/app.js"></script>
