--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@ title: Home
 
 <script id="postpal-js" data-blog_uuid="6c5f7a0d-66c8-4407-8ee0-f822585cb8b0" src="https://js-staging.postpal.io/app.js" async></script>
 
-<div id="postpal-content"></div>
+<div id="postpal-blog"></div>
 
+<footer class="postpal-block" data-block_id="1">Old footer content</footer>
