--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ title: Home
 
 <div id="postpal-blog"></div>
 
-<footer class="postpal-block" data-block_id="1">Old footer content</footer>
+<footer class="postpal-block" data-block_id="footer">Old footer content</footer>
